Last the last exercices changes

--- a/Aula 03 - Numpy.ipynb
+++ b/Aula 03 - Numpy.ipynb
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1774,7 @@
        "(64, 512)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,16 +1787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 2)"
+       "(64, 512)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,19 +1813,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (2,2) (64,512) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [78], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Somando as diferenças entre cada elemento das duas matrizes, apenas para ilustrar que elas não são iguais\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m (X_processado \u001b[39m-\u001b[39;49m X)\u001b[39m.\u001b[39msum()\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,2) (64,512) "
-     ]
+     "data": {
+      "text/plain": [
+       "-12.03715828985348"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1835,28 +1834,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.64565417,  0.63558569,  0.18985037, ...,  0.9407926 ,\n",
-       "        -0.33502139, -0.25630079],\n",
-       "       [ 0.79926033, -0.99183608,  1.62996518, ...,  1.3499973 ,\n",
-       "         0.1793272 , -0.45540306],\n",
-       "       [-1.40694973, -0.14335357, -3.1411293 , ...,  0.59399442,\n",
-       "        -0.20819885, -0.68863616],\n",
+       "array([[-0.53868865, -2.47856644,  0.83621731, ...,  1.07353036,\n",
+       "         0.17031049, -0.92291358],\n",
+       "       [ 0.40203064,  0.08364986, -0.46084525, ..., -1.03789925,\n",
+       "        -0.38724197,  0.03401943],\n",
+       "       [ 1.0391802 ,  0.14103112, -1.11981651, ...,  0.53549813,\n",
+       "        -0.82924863,  0.23924378],\n",
        "       ...,\n",
-       "       [-0.56578134, -1.36609159,  0.82413029, ..., -0.37646926,\n",
-       "         0.40312924, -0.68218832],\n",
-       "       [-1.40257045, -0.60889052, -1.17155642, ..., -0.71968627,\n",
-       "         2.2954325 ,  0.30261371],\n",
-       "       [-1.49981309,  0.39731263, -1.20267614, ..., -0.97741917,\n",
-       "        -0.61459898, -2.80269826]])"
+       "       [-0.51294429,  0.3002911 ,  2.6924489 , ...,  0.23935178,\n",
+       "         1.96267114, -1.28957192],\n",
+       "       [ 0.3105988 , -0.24230044,  0.36095911, ..., -3.12199531,\n",
+       "         2.18804181,  0.0322723 ],\n",
+       "       [-0.93228051, -1.29805463, -0.17188435, ...,  0.89961743,\n",
+       "        -0.52161084,  0.35673318]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1868,28 +1867,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1280.56780701,  1260.59831965,   376.54256267, ...,\n",
-       "         1865.93498957,  -664.46966189,  -508.33797577],\n",
-       "       [ 1585.22486486, -1967.1728449 ,  3232.81567067, ...,\n",
-       "         2677.53721106,   355.67127269,  -903.23042618],\n",
-       "       [-2790.49466272,  -284.32242537, -6230.00550517, ...,\n",
-       "         1178.10766076,  -412.934278  , -1365.81676714],\n",
+       "array([[-0.53905599, -2.47893379,  0.83584997, ...,  1.07316302,\n",
+       "         0.16994314, -0.92328093],\n",
+       "       [ 0.40166329,  0.08328251, -0.46121259, ..., -1.03826659,\n",
+       "        -0.38760931,  0.03365209],\n",
+       "       [ 1.03881285,  0.14066377, -1.12018385, ...,  0.53513078,\n",
+       "        -0.82961597,  0.23887644],\n",
        "       ...,\n",
-       "       [-1122.1508381 , -2709.45806981,  1634.55106225, ...,\n",
-       "         -746.67591204,   799.55238053, -1353.02835757],\n",
-       "       [-2781.80896238, -1207.65207061, -2323.62384387, ...,\n",
-       "        -1427.40046155,  4552.68017731,   600.19340888],\n",
-       "       [-2974.67660013,   788.01590636, -2385.34560994, ...,\n",
-       "        -1938.5788497 , -1218.97401825, -5558.7732737 ]])"
+       "       [-0.51331163,  0.29992375,  2.69208156, ...,  0.23898443,\n",
+       "         1.96230379, -1.28993926],\n",
+       "       [ 0.31023145, -0.24266779,  0.36059176, ..., -3.12236266,\n",
+       "         2.18767447,  0.03190496],\n",
+       "       [-0.93264786, -1.29842197, -0.17225169, ...,  0.89925009,\n",
+       "        -0.52197818,  0.35636584]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.11"
+   "version": "3.9.11 (tags/v3.9.11:2de452f, Mar 16 2022, 14:33:45) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
